--- a/eclair-core/src/main/resources/reference.conf
+++ b/eclair-core/src/main/resources/reference.conf
@@ -1,6 +1,6 @@
 eclair {
 
-  chain = "test" // "regtest" for regtest, "test" for testnet. Livenet is not supported.
+  chain = "main" // "testnet" for testnet, "regtest" for regtest.
 
   server {
     public-ips = [] // external ips, will be announced on the network
@@ -19,9 +19,10 @@ eclair {
 
   bitcoind {
     host = "localhost"
-    rpcport = 18332
-    rpcuser = "foo"
-    rpcpassword = "bar"
+    rpcport = 0    // 0 - by default
+    bitdir = ""
+    rpcuser = ""
+    rpcpassword = ""
     zmq = "tcp://127.0.0.1:29000"
   }
 
@@ -36,24 +37,24 @@ eclair {
 
   default-feerates { // those are in satoshis per byte
     delay-blocks {
-      1 = 210
-      2 = 180
-      6 = 150
-      12 = 110
-      36 = 50
-      72 = 20
+      1 = 820
+      2 = 720
+      6 = 600
+      12 = 440
+      36 = 200
+      72 = 80
     }
   }
 
-  node-alias = "eclair"
+  node-alias = "QTUM"
   node-color = "49daaa"
   global-features = ""
   local-features = "08" // initial_routing_sync
   channel-flags = 1 // announce channels
   dust-limit-satoshis = 546
-  default-feerate-per-kb = 20000  // default bitcoin core value
+  default-feerate-per-kb = 800000  // qtum core value
 
-  max-htlc-value-in-flight-msat = 100000000000 // 1 BTC ~= unlimited
+  max-htlc-value-in-flight-msat = 2147483648000 // 21.5 QTUM ~= unlimited
   htlc-minimum-msat = 1
   max-accepted-htlcs = 30
 
