adjust dust-limit-satoshis

--- a/eclair-core/src/main/resources/reference.conf
+++ b/eclair-core/src/main/resources/reference.conf
@@ -57,7 +57,7 @@ eclair {
   ]
   channel-flags = 1 // announce channels
 
-  dust-limit-satoshis = 546
+  dust-limit-satoshis = 218400 // 182 * 3 * 400000 / 1000
   max-htlc-value-in-flight-msat = 2147483648000 // 21.5 QTUM ~= unlimited
   htlc-minimum-msat = 1
   max-accepted-htlcs = 30
