--- a/eclair-core/src/main/resources/reference.conf
+++ b/eclair-core/src/main/resources/reference.conf
@@ -27,23 +27,24 @@ eclair {
     bitdir = ""
     rpcuser = ""
     rpcpassword = ""
-    zmq = "tcp://127.0.0.1:29000"
+    zmqblock = "tcp://127.0.0.1:29000"
+    zmqtx = "tcp://127.0.0.1:29000"
   }
 
-  default-feerates { // those are in satoshis per byte
+  default-feerates { // those are in satoshis per kilobyte
     delay-blocks {
-      1 = 820
-      2 = 720
-      6 = 600
-      12 = 440
-      36 = 200
-      72 = 80
+      1 = 820000
+      2 = 720000
+      6 = 600000
+      12 = 440000
+      36 = 200000
+      72 = 80000
     }
   }
   min-feerate = 80000 // minimum feerate in satoshis per byte (same default value as bitcoin core's minimum relay fee)
   smooth-feerate-window = 6 // 1 = no smoothing
 
-  node-alias = "QTUM"
+  node-alias = "qtum-eclair"
   node-color = "49daaa"
 
   global-features = ""
