--- a/eclair-core/src/main/resources/reference.conf
+++ b/eclair-core/src/main/resources/reference.conf
@@ -23,10 +23,10 @@ eclair {
 
   bitcoind {
     host = "localhost"
-    rpcport = 0    // 0 - by default
+    rpcport = 3889
     bitdir = ""
-    rpcuser = ""
-    rpcpassword = ""
+    rpcuser = "foo"
+    rpcpassword = "bar"
     zmqblock = "tcp://127.0.0.1:29000"
     zmqtx = "tcp://127.0.0.1:29000"
   }
