disable support of electrum for now

--- a/eclair-core/src/main/resources/reference.conf
+++ b/eclair-core/src/main/resources/reference.conf
@@ -19,7 +19,7 @@ eclair {
   // override this with a script/exe that will be called everytime a new database backup has been created
   # backup-notify-script = "/absolute/path/to/script.sh"
 
-  watcher-type = "bitcoind" // other *experimental* values include "electrum"
+  watcher-type = "bitcoind" // electrum not supported yet
 
   bitcoind {
     host = "localhost"
