update readme and config

--- a/eclair-core/src/main/resources/reference.conf
+++ b/eclair-core/src/main/resources/reference.conf
@@ -59,7 +59,7 @@ eclair {
   channel-flags = 1 // announce channels
 
   dust-limit-satoshis = 72800
-  max-htlc-value-in-flight-msat = 50000000000 // 500m QTUM
+  max-htlc-value-in-flight-msat = 500000000000 // 5 QTUM
   htlc-minimum-msat = 1
   max-accepted-htlcs = 30
 
