fix dockerfile and update config

--- a/eclair-core/src/main/resources/reference.conf
+++ b/eclair-core/src/main/resources/reference.conf
@@ -1,6 +1,6 @@
 eclair {
 
-  chain = "mainnet" // "mainnet" for mainnet, "testnet" for testnet, "regtest" for regtest
+  chain = "testnet" // "mainnet" for mainnet, "testnet" for testnet, "regtest" for regtest
 
   server {
     public-ips = [] // external ips, will be announced on the network
@@ -23,7 +23,7 @@ eclair {
 
   bitcoind {
     host = "localhost"
-    rpcport = 3889
+    rpcport = 13889
     bitdir = ""
     rpcuser = "foo"
     rpcpassword = "bar"
